--- a/client/index.tpl.html
+++ b/client/index.tpl.html
@@ -3,7 +3,18 @@
   <head>
     <title>And Vote</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <style>
+      @font-face {
+        font-family: 'Roboto';
+      }
+
+      html, body {
+        font-family: Roboto;
+        height: 100%;
+        margin: 0px;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
